make-a-wish-salesforce/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>RE_Mailing_City1__c</fullName>
        <description>CITY</description>
        <label>RE Mailing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Mailing_City2__c</fullName>
        <description>CITY</description>
        <label>RE Mailing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Mailing_City__c</fullName>
        <description>CITY</description>
        <label>RE Mailing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Mailing_Country__c</fullName>
        <description>COUNTRY</description>
        <label>RE Mailing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Mailing_State1__c</fullName>
        <label>RE Mailing State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Mailing_State__c</fullName>
        <description>STATE</description>
        <label>RE Mailing State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Mailing_Street1__c</fullName>
        <description>ADDRESS_BLOCK</description>
        <label>RE Mailing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Mailing_Street2__c</fullName>
        <description>ADDRESS_BLOCK</description>
        <label>RE Mailing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Mailing_Street__c</fullName>
        <description>RE Mailing Street</description>
        <label>RE Mailing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Mailing_ZIP__c</fullName>
        <description>ZIP</description>
        <label>RE Mailing ZIP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Mailing_Zip1__c</fullName>
        <description>POST_CODE</description>
        <label>RE Mailing Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Mailing_Zip2__c</fullName>
        <description>ZIP</description>
        <label>RE Mailing Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Middle_Name__c</fullName>
        <description>MIDDLE_NAME</description>
        <label>RE Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Mobile_Phone__c</fullName>
        <description>NUM</description>
        <label>RE Mobile Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Non_Verbal__c</fullName>
        <description>PRIMARY_LANGUAGE</description>
        <label>RE Non - Verbal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Other_Address__c</fullName>
        <description>ADDRESS_BLOCK</description>
        <label>RE Other Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Other_City__c</fullName>
        <description>CITY</description>
        <label>RE Other City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Other_Country__c</fullName>
        <description>COUNTRY</description>
        <label>RE Other Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Other_Phone__c</fullName>
        <description>NUM</description>
        <label>RE Other Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Other_State_Province__c</fullName>
        <description>STATE</description>
        <label>RE Other State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Other_Street__c</fullName>
        <description>ADDRESS_BLOCK</description>
        <label>RE Other Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Other_Zip_Postal_Code__c</fullName>
        <description>POST_CODE</description>
        <label>RE Other Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Personal_Email__c</fullName>
        <description>NUM</description>
        <label>RE Personal Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Position1__c</fullName>
        <description>POSITION</description>
        <label>RE Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Position__c</fullName>
        <description>POSITION</description>
        <label>RE Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Preferred_Name__c</fullName>
        <description>NICKNAME</description>
        <label>RE Preferred Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Preferred_Phone_Types_c__c</fullName>
        <description>PHONE_TYPE_ID</description>
        <label>RE Preferred_Phone_Types__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Preferred_Phone__c</fullName>
        <description>NUM</description>
        <label>RE Preferred Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Primary_Address__c</fullName>
        <description>ADDRESS_BLOCK</description>
        <label>RE Primary Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Professional_Skills_Other_Notes__c</fullName>
        <description>&quot;DESCRIPTION
COMMENTS&quot;</description>
        <label>RE Professional Skills (Other Notes)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Professional_Skills__c</fullName>
        <description>DESCRIPTION</description>
        <label>RE Professional Skills</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Provider_Type__c</fullName>
        <description>RECIP_RELATION_CODE</description>
        <label>RE Provider Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Publicity_OK__c</fullName>
        <description>PR_OK</description>
        <label>RE Publicity OK</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Race_Ethnicity_Details__c</fullName>
        <description>ETHNICITY</description>
        <label>RE Race/Ethnicity Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Race_Ethnicity__c</fullName>
        <description>ETHNICITY</description>
        <label>RE Race/Ethnicity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Record_Id__c</fullName>
        <description>&quot;MAWWISHDATAID, IMPORTID 
|ID, IMPORT_ID&quot;</description>
        <externalId>true</externalId>
        <label>RE_Record_Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>RE_Referrer_City__c</fullName>
        <description>RE Referrer City</description>
        <label>RE Referrer City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Referrer_Email__c</fullName>
        <description>RE Referrer Email</description>
        <label>RE Referrer Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Referrer_First_Name__c</fullName>
        <description>RE Referrer FirstName</description>
        <label>RE Referrer First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Referrer_Last_Name__c</fullName>
        <description>RE_Referrer Last Name</description>
        <label>RE Referrer Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Referrer_Phone__c</fullName>
        <description>RE Referrer Phone</description>
        <label>RE Referrer Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Referrer_Zip__c</fullName>
        <description>RE Referrer Zip</description>
        <label>RE Referrer Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Region_Chapter__c</fullName>
        <description>Chapter migrating from</description>
        <label>RE Region Chapter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Region__c</fullName>
        <description>REGION</description>
        <label>RE Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Second_Recipient_Name__c</fullName>
        <description>FIRST_NAME</description>
        <label>RE Second Recipient Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Social_Media_Link__c</fullName>
        <description>NUM</description>
        <label>RE Social Media Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Speak__c</fullName>
        <description>DESCRIPTION</description>
        <label>RE Speak</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_State_Employer__c</fullName>
        <description>STATE</description>
        <label>RE State Employer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Street_Employer__c</fullName>
        <description>ADDRESS_BLOCK</description>
        <label>RE Street Employer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Title__c</fullName>
        <description>TITLE_1</description>
        <label>RE Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Type__c</fullName>
        <description>PHONETYPEID</description>
        <label>RE Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_What_is_your_race_ethnicity__c</fullName>
        <description>ETHNICITY</description>
        <label>RE What Is Your Race/Ethnicity?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Work_Email__c</fullName>
        <description>NUM</description>
        <label>RE Work Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Work_Phone__c</fullName>
        <description>NUM</description>
        <label>RE Work Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Work_Phone_c__c</fullName>
        <description>NUM</description>
        <label>RE Work Phone_c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Zip_Employer1__c</fullName>
        <description>It holds Employeer Zip</description>
        <label>RE Zip Employer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Zip_Employer__c</fullName>
        <description>POST_CODE</description>
        <label>RE Zip Employer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Zip_Referrer__c</fullName>
        <description>POST_CODE</description>
        <label>RE Zip Referrer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Race_Ethnicity_Details__c</fullName>
        <description>It will capture the Child’s Ethnicity other details</description>
        <label>Race/Ethnicity Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Race_Ethnicity__c</fullName>
        <description>It will be used for statistical purpose</description>
        <label>Race/Ethnicity</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>American Indian or Alaska Native</fullName>
                </value>
                <value>
                    <fullName>Asian</fullName>
                </value>
                <value>
                    <fullName>Black or African American</fullName>
                </value>
                <value>
                    <fullName>Hispanic or Latino</fullName>
                </value>
                <value>
                    <fullName>Native Hawaiian/Other Pacific Islander</fullName>
                </value>
                <value>
                    <fullName>Not Reported</fullName>
                </value>
                <value>
                    <fullName>White or Caucasian</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Re_commitment_Form_Signed__c</fullName>
        <label>Re-commitment Form Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Read__c</fullName>
        <description>This field used to select more than language which can be read</description>
        <label>Read</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>American Sign Language</fullName>
                </value>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>French and French Creole</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Hindi</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Polish</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Tagalog</fullName>
                </value>
                <value>
                    <fullName>Vietnamese</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_Publicity_Candidate__c</fullName>
        <description>This field is used to give more details to publicity candidate</description>
        <inlineHelpText>Please add notes on why you feel this wish child would be a good publicity candidate.</inlineHelpText>
        <label>Reason for Publicity Candidate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recent_Task_Completed_Date__c</fullName>
        <description>Used to hold the value of recent task completed date</description>
        <label>Recent Task Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Recently_Completed_Training_Date__c</fullName>
        <description>Used to hold the recently completed training date</description>
        <label>Recently Completed Training Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Recipient_Email__c</fullName>
        <description>Test</description>
        <label>Hidden First Recipient Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ReferralComment__c</fullName>
        <description>It will get the values from the Referral Comment in the lead when the lead is converted</description>
        <label>Referral Comment</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Referral_Age__c</fullName>
        <description>It holds the details of Referral age (birthday date - leadcreationdate)</description>
        <formula>IF( NOT(ISBLANK(Birthdate)) , 
IF(DATE(2000 , MONTH( Birthdate) , DAY( Birthdate) ) &lt;= DATE( 2000 , MONTH(Lead_Created_Date__c) , DAY(Lead_Created_Date__c) ), 
YEAR (Lead_Created_Date__c) - YEAR (Birthdate), 
YEAR (Lead_Created_Date__c) - YEAR (Birthdate) -1 ), 
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referral Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Referrer_City__c</fullName>
        <description>It will capture city of the wish referrer.</description>
        <label>Referrer City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer_Email__c</fullName>
        <description>It will capture the referrer Email.</description>
        <label>Referrer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Referrer_FirstName__c</fullName>
        <description>It capture the wish child Referrer name.</description>
        <label>Referrer FirstName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer_Last_Name__c</fullName>
        <description>It capture the wish child Referrer name.</description>
        <label>Referrer Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer_Phone__c</fullName>
        <description>It will capture the phone number of Referrer</description>
        <label>Referrer Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Referrer_Zip__c</fullName>
        <description>It capture the wish referrer Zip code.</description>
        <label>Referrer Zip</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Chapter__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>It holds the contact region chapter</description>
        <label>Chapter Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts (Region Chapter)</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It holds the region code for chapter</description>
        <inlineHelpText>1.Please select All fields Radio Button to search Region Code based on Name in Search Dialogue box.
2.Region Chapter needs to be filled in order to see the Region Code based on Chapters.</inlineHelpText>
        <label>Region Code</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>$Source.Region_Chapter__c</field>
                <operation>equals</operation>
                <valueField>Regions__c.Chapter_Name__c</valueField>
            </filterItems>
            <filterItems>
                <field>Regions__c.Chapter_Name__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Regions__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RelatedContacts__c</fullName>
        <description>This field is used to store the related contacts (ie) Father, Mother and Parent Legal Guardian.</description>
        <label>Hidden Related Contacts</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Relationship_Type__c</fullName>
        <description>This field is used to specify the relationship to wish child.</description>
        <label>Relationship Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <description>It will hold the relationship infromation</description>
        <label>Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mother</fullName>
                </value>
                <value>
                    <fullName>Father</fullName>
                </value>
                <value>
                    <fullName>Sister</fullName>
                </value>
                <value>
                    <fullName>Brother</fullName>
                </value>
                <value>
                    <fullName>Guardian</fullName>
                </value>
                <value>
                    <fullName>Grandmother</fullName>
                </value>
                <value>
                    <fullName>Grandfather</fullName>
                </value>
                <value>
                    <fullName>Stepmother</fullName>
                </value>
                <value>
                    <fullName>Stepfather</fullName>
                </value>
                <value>
                    <fullName>Stepsister</fullName>
                </value>
                <value>
                    <fullName>Stepbrother</fullName>
                </value>
                <value>
                    <fullName>Half Sister</fullName>
                </value>
                <value>
                    <fullName>Half Brother</fullName>
                </value>
                <value>
                    <fullName>Foster Mother</fullName>
                </value>
                <value>
                    <fullName>Foster Father</fullName>
                </value>
                <value>
                    <fullName>Foster Sister</fullName>
                </value>
                <value>
                    <fullName>Foster Brother</fullName>
                </value>
                <value>
                    <fullName>Aunt</fullName>
                </value>
                <value>
                    <fullName>Uncle</fullName>
                </value>
                <value>
                    <fullName>Cousin</fullName>
                </value>
                <value>
                    <fullName>Husband</fullName>
                </value>
                <value>
                    <fullName>Wife</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Friend</fullName>
                </value>
                <value>
                    <fullName>Neighbour</fullName>
                </value>
                <value>
                    <fullName>Family</fullName>
                </value>
                <value>
                    <fullName>Coworker</fullName>
                </value>
                <value>
                    <fullName>Son</fullName>
                </value>
                <value>
                    <fullName>Daughter</fullName>
                </value>
                <value>
                    <fullName>Grandson</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relationship_to_Wish_Child__c</fullName>
        <description>It will capture Adult Emergency Contact Relationship to Wish Child</description>
        <label>Relationship To Wish Child (Other)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residing_in_US__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hidden Residing in US</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Residing_with_Wish_child__c</fullName>
        <description>It will indicate that participant is residing with wish child or not.</description>
        <label>Residing With Wish Child</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Restaurant__c</fullName>
        <description>It will hold the Restaurant details.</description>
        <label>Restaurant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SD1_Condition_Description__c</fullName>
        <description>It holds the condition description for Secoundary Diagnosis 1.</description>
        <label>Secondary Diagnosis 1 Cond Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SD1_ICD_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It holds Secondary Diagnosis value.</description>
        <label>Secondary Diagnosis 1 ICD-10 Code</label>
        <referenceTo>ICD_Codes__c</referenceTo>
        <relationshipLabel>Contacts (Secondary Diagnosis 1 ICD-10 Code)</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SD2_Condition_Description__c</fullName>
        <description>It holds the condition description for Secoundary Diagnosis 2.</description>
        <label>Secondary Diagnosis 2 Cond Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SD2_ICD_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It contains ICD code for Secondary Diagnosis 2.</description>
        <label>Secondary Diagnosis 2 ICD-10 Code</label>
        <referenceTo>ICD_Codes__c</referenceTo>
        <relationshipLabel>Contacts (Secondary Diagnosis 2 ICD-10 Code)</relationshipLabel>
        <relationshipName>Contacts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SD3_Condition_Description__c</fullName>
        <description>It holds the condition description for Secoundary Diagnosis 3.</description>
        <label>Secondary Diagnosis 3 Cond Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SD3_ICD_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It contains ICD code for Secondary Diagnosis 3.</description>
        <label>Secondary Diagnosis 3 ICD-10 Code</label>
        <referenceTo>ICD_Codes__c</referenceTo>
        <relationshipLabel>Contacts (Secondary Diagnosis 3 ICD-10 Code)</relationshipLabel>
        <relationshipName>Contacts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Same_as_Household_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used in Update contact info page.</description>
        <label>Same As Household Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Second_Recipient_Email__c</fullName>
        <description>This field is used to capture the second recipient email for getting signature for wish receipt form</description>
        <label>Hidden Second Recipient Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Second_Recipient_Name__c</fullName>
        <description>This field is used to capture the name of the second recipient</description>
        <label>Hidden Second Recipient Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Self_Assessment_Date__c</fullName>
        <label>Self-Assessment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Self_describe_comment_box__c</fullName>
        <description>This field is displayed when the gender field has selected the value as Self-Describe.</description>
        <label>Self describe comment box</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <description>It holds the short description of ICD code.</description>
        <formula>ICD_10_Code__r.Short_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Short Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sibling_Age__c</fullName>
        <description>It hold the age of the Sibling.</description>
        <label>Sibling Age</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signature_Obtained_wish_Child__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box when all required signatures have been received from the wish child. Doing so will turn off the Current Age indicator.</inlineHelpText>
        <label>Signature Obtained</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Signature_Obtained_wish_Family__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box when all required signatures have been received from this wish participant. Doing so will turn off the Current Age indicator.</inlineHelpText>
        <label>Signature Obtained</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Snack_Food__c</fullName>
        <description>This will capture the wish child&apos;s snack food details.</description>
        <label>Snack Food</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Social_Media_Link__c</fullName>
        <description>Make-A-Wish would like to stay connected through social media. If interested, please
provide contact information for each site on which you are active.</description>
        <inlineHelpText>Make-A-Wish would like to stay connected through social media. If interested, please
provide contact information for each site on which you are active.</inlineHelpText>
        <label>Social Media Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Social_Media_Policy_Received__c</fullName>
        <label>Social Media Policy Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Speak__c</fullName>
        <description>This filed used to select more than one language which can speak</description>
        <label>Speak</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>American Sign Language</fullName>
                </value>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>French and French Creole</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Hindi</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Polish</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Tagalog</fullName>
                </value>
                <value>
                    <fullName>Vietnamese</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Specialty_Comments__c</fullName>
        <description>It will capture comments regarding speciality</description>
        <label>Specialty Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specialty_Notes__c</fullName>
        <description>Notes related to a medical professional&apos;s specialty or areas of practice</description>
        <label>Specialty Notes</label>
        <type>TextArea</type>
    </fields>
</CustomObject>